--- a/css/yellow.css
+++ b/css/yellow.css
@@ -27,7 +27,7 @@
 .right-resume .timeline li:before {
   border-left: 1px solid #ffc107; }
 
-.right-resume .timeline li .timeline-item .des-pos {
+.right-resume .timeline li .about .des-pos {
   color: #ffc107; }
 
 .right-resume .list-skill:before {
