--- a/css/red.css
+++ b/css/red.css
@@ -24,16 +24,16 @@
 .right-about .container-fruit .box-col .img-box {
   background-color: #dc3545; }
 
-.right-resume .timeline li:before {
+.right-about .timeline li:before {
   border-left: 1px solid #dc3545; }
 
-.right-resume .timeline li .timeline-item .des-pos {
+.right-about .timeline li .timeline-item .des-pos {
   color: #dc3545; }
 
-.right-resume .list-skill:before {
+.right-about .list-skill:before {
   border-left: 1px solid #dc3545; }
 
-.right-resume .list-skill .bar .bar-outer .bar-inner {
+.right-about .list-skill .bar .bar-outer .bar-inner {
   background: #dc3545; }
 
 .right-portfolio .portfolio-section .portfolio-filter ul li.active {
